homepage and extra category page

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,9 +8,29 @@
     background-color: lightgreen ;
 }
 
-.cart {
+.cart { 
+    size: "100%";
+    /* margin-left: 20px; */
     border-radius: 50%;
     height: 50px;
     width: 50px;
     /* background-color: rgb(0, 0, 0);    */
+}
+.cart:hover {
+    
+    background-color: lightgreen ;
+}
+.tab {
+    border-radius: 1.5rem;
+    height: 40px;
+    width: 100px;
+    font-size: medium;
+    background-color: lightgreen;
+    
+}
+.tab:hover {
+    /* height: 60px;
+    width: 150px;
+    font-size: large; */
+    background-color: #467f46;
 }
