--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,12 +6,16 @@
 }
 .button:hover {
     
-    background-color: green ;
+    background-color: white;
 }
 
 .cart {
     border-radius: 50%;
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     /* background-color: rgb(0, 0, 0);    */
+}
+.cart:hover {
+    
+    background-color: white;
 }
